# pyXEOL

./: .gitignore  README.md  pyproject.toml  setup.py
src/pyXEOL/: __init__.py  specfun.py
src/pyXEOL/laue/: __init__.py  convert_xml.py
src/pyXEOL/laue/symOps/: SymmetryOps225.npz
src/pyXEOL/visualize/: dashboards.py
src/pyXEOL/xbic/: process_xbic.py
src/pyXEOL/xeol/: __init__.py  calibrate.py  fit.py  map2d.py
src/pyXEOL/xrf/: process_xrf.py
src/pyxeol/: __init__.py  misc.py  readMDA.py  scanInfo.py  specfun.py  storage.py
src/pyxeol/laue/: __init__.py  convert_xml.py  csl_types.py  map2d.py
src/pyxeol/resources/: spectral_sensitivity.xlsx
src/pyxeol/xbic/: process_xbic.py
src/pyxeol/xeol/: calibrate.py  fit.py  map2d.py
src/pyxeol/xrf/: fit.py  process_xrf.py
