[tool.poetry]
name = "pyxeol"
version = "0.1.0"
description = "XEOL analysis package"
authors = ["Naveed Rahman <naveed@anl.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
dask = "^2023.2.0"
scipy = "^1.10.0"
matplotlib = "^3.7.0"
Pillow = "^9.4.0"
scikit-learn = "^1.2.1"
xarray = "^2023.2.0"
zarr = "^2.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
