[tool.poetry]
name = "pyxeol"
version = "1.4.3"
description = "XEOL analysis package"
authors = ["Naveed Rahman <naveed@anl.gov>"]
readme = "README.md"
packages = [
            { include = "pyxeol", from = "src" },
            ]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.2"
dask = "^2023.2.0"
scipy = "^1.10.0"
scikit-image = "^0.22.0"
matplotlib = "^3.7.0"
Pillow = "^9.4.0"
scikit-learn = "^1.2.1"
xarray = "^2023.2.0"
zarr = "^2.14.1"
dask-image = "^2022.9.0"
tifffile = "^2023.2.3"
h5py = "^3.10.0"
periodictable = "^1.6.1"
openpyxl = "^3.1.2"
holoviews = "^1.18.1"
seaborn = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
